Bug 846986 - Include jsscriptinlines.h in SPSProfiler.cpp so that it builds in no-jit configurations. r=jandem, a=akeybl